@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. 2.4.20 January 9, 2014
 
+* use 'rails_layout' gem to generate Devise views with CSS styling for Foundation or Bootstrap
 * change commands to use 'rails_layout' gem version 1.0.0
 
 h2. 2.4.19 January 5, 2014
